force-app/main/default/objects/Client_Portal_Credential_Request__c/Client_Portal_Credential_Request__c.object-meta.xml
<CustomObject>
    <label>Client Portal Credential Request</label>
    <nameField>
        <displayFormat>CRED-{0000000000}</displayFormat>
        <label>Client Portal Credential Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Portal Credential Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>