force-app/main/default/objects/Client_Portal_Credential_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Portal Credential Requests</relationshipLabel>
    <relationshipName>Client_Portal_Credential_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>