force-app/main/default/objects/Client_Portal_Credential_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Portal Credential Requests</relationshipLabel>
    <relationshipName>Client_Portal_Credential_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>