force-app/main/default/objects/Client_Portal_Credential_Request__c/fields/Submitted_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Email__c</fullName>
    <label>Submitted Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>