force-app/main/default/objects/Client_Portal_Credential_Request__c/listViews/Customer_Service_Client_Portal_Credential_Request.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Client_Portal_Credential_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service</label>
    <queue>Customer_Service</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>